# choice-string

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  parser.rs
tests/: integration.rs
