[package]
name = "choice-string"
version = "0.0.1"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "Provides utilities to parse selections (indices and ranges) from a string"
repository = "https://github.com/CerulanLumina/choice-string"

[dependencies]
nom = "7"
range_union_find = "0.4.4"
thiserror = "1"
